--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ chardet==4.0.0
 decorator==5.0.9
 docker==5.0.0
 gitdb==4.0.7
-giteapy==1.15.0
+giteapy-soteria==1.15.0
 GitPython==3.1.18
 idna==3.2
 importlib-metadata==1.7.0
