--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ docker==5.0.0
 gitdb==4.0.7
 giteapy-soteria==1.15.0
 GitPython==3.1.18
-idna==3.2
+idna
 importlib-metadata==1.7.0
 isort==5.9.1
 lazy-object-proxy==1.6.0
