--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ docker==5.0.0
 gitdb==4.0.7
 giteapy-soteria==1.15.0
 GitPython==3.1.18
-idna
+idna==2.10
 importlib-metadata==1.7.0
 isort==5.9.1
 lazy-object-proxy==1.6.0
@@ -22,6 +22,7 @@ pylint==2.8.3
 pysnyk==0.6.2
 python-dateutil==2.8.1
 python-dotenv==0.18.0
+python-sonarqube-api==1.2.4
 PyYAML==5.4.1
 requests==2.25.1
 retry==0.9.2
