--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 astroid==2.5.6
 autopep8==1.5.7
+boto3==1.18.1
+botocore==1.21.1
 certifi==2021.5.30
 chardet==4.0.0
 decorator==5.0.9
@@ -7,9 +9,10 @@ docker==5.0.0
 gitdb==4.0.7
 giteapy-soteria==1.15.0
 GitPython==3.1.18
-idna
+idna==3.2
 importlib-metadata==1.7.0
 isort==5.9.1
+jmespath==0.10.0
 lazy-object-proxy==1.6.0
 mashumaro==1.24
 mccabe==0.6.1
@@ -25,6 +28,7 @@ python-dotenv==0.18.0
 PyYAML==5.4.1
 requests==2.25.1
 retry==0.9.2
+s3transfer==0.5.0
 six==1.16.0
 smmap==4.0.0
 toml==0.10.2
