--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ GITEA_USERNAME=USERNAME-TO-ACCESS-GITEA-AS
 GITEA_HOST=localhost
 GITEA_PORT=3000
 GITEA_REPO=YOUR-CODE-REPO
+SNYK_TOKEN=YOUR-SNYK-TOKEN
