--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,9 @@ GITEA_USERNAME=USERNAME-TO-ACCESS-GITEA-AS
 GITEA_HOST=localhost
 GITEA_PORT=3000
 GITEA_REPO=YOUR-CODE-REPO
+SONAR_URL=YOUR-SONAR-URL
+SONAR_LOGIN=YOUR-SONAR-USERNAME-OR-TOKEN
+SONAR_PASSWORD=YOUR-SONAR-PASSWORD-BLANK-IF-TOKEN
+SONAR_KEY=YOUR-SONAR-PROJECT-KEY
+S3_BUCKET_NAME=YOUR-S3-BUCKET-NAME
 SNYK_TOKEN=YOUR-SNYK-TOKEN
