Fixed critical error in loading bucket, added aws credentials to .env example

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,7 @@ SONAR_LOGIN=YOUR-SONAR-USERNAME-OR-TOKEN
 SONAR_PASSWORD=YOUR-SONAR-PASSWORD-BLANK-IF-TOKEN
 SONAR_KEY=YOUR-SONAR-PROJECT-KEY
 S3_BUCKET_NAME=YOUR-S3-BUCKET-NAME
+S3_REGION_NAME=YOU-S3-REGION-NAME
+AWS_ACCESS_KEY_ID=YOUR-AWS-ACCESS-KEY-ID
+AWS_SECRET_ACCESS_KEY=YOUR-SECRET-ACCESS-KEY
 SNYK_TOKEN=YOUR-SNYK-TOKEN
